<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
 <variable
     name="viewModel"
     type="com.mattg.simplevoicerecorder.ui.RecordViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.RecordFragment">


    <EditText
        android:id="@+id/et_fileName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/filename_text"
        android:lines="1"
        android:visibility="@{viewModel.isFileNameEditTextVisible()}"
        android:text="@={viewModel._fileNameText}"
        app:layout_constraintBottom_toTopOf="@+id/tv_recordingTime"
        app:layout_constraintEnd_toStartOf="@+id/btn_saveRecording"
        app:layout_constraintStart_toStartOf="parent" />

    <com.visualizer.amplitude.AudioRecordView
        android:id="@+id/av_visual"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        app:chunkAlignTo="bottom"
        app:chunkRoundedCorners="true"
        app:chunkSoftTransition="true"
        app:chunkColor="?colorAccent"
        app:chunkSpace="1dp"
        app:chunkWidth="2dp"
        app:chunkMaxHeight="48dp"
        app:chunkMinHeight="2dp"
        app:direction="leftToRight"
        app:layout_constraintBottom_toTopOf="@+id/et_fileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_record"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_record_button"
        android:scaleType="fitXY"
        android:src="@drawable/recordblue"
        android:visibility="@{viewModel.isRecordButtonVisible()}"
        android:onClick="@{() -> viewModel.recordClick()}"
        app:layout_constraintBottom_toTopOf="@+id/tv_availableSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_availableSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/medium_text"
        android:text="@{String.format(@string/storage_space, viewModel.storageSpaceValue)}"
        app:layout_constraintBottom_toTopOf="@+id/tv_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_recordingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_record"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@{viewModel.recordingStateText}"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_viewRecordings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_baseline_list_24"
        android:text="@string/view_recordings"
        android:onClick="@{() -> viewModel.viewRecordingsClick()}"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/small_button"
        android:layout_height="@dimen/small_button"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:onClick="@{() -> viewModel.settingsClick()}"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_for_app_settings" />

    <ImageButton
        android:id="@+id/btn_stopRecord"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_to_stop_recording"
        android:scaleType="fitXY"
        android:src="@drawable/stopblue"
        android:visibility="@{viewModel.isStopButtonVisible()}"
        android:onClick="@{() -> viewModel.stopRecording()}"
        app:layout_constraintBottom_toBottomOf="@+id/btn_record"
        app:layout_constraintEnd_toStartOf="@+id/btn_record"
        app:layout_constraintTop_toTopOf="@+id/btn_record" />

    <ImageButton
        android:id="@+id/btn_recordPlay"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/playblue"
        android:visibility="@{viewModel.isPlayButtonVisible()}"
        android:onClick="@{() -> viewModel.playClick()}"
        app:layout_constraintBottom_toBottomOf="@+id/btn_record"
        app:layout_constraintStart_toEndOf="@+id/btn_record"
        app:layout_constraintTop_toTopOf="@+id/btn_record" />

    <ImageButton
        android:id="@+id/btn_saveRecording"
        android:layout_width="@dimen/small_button"
        android:layout_height="@dimen/small_button"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/diskblue"
        android:visibility="@{viewModel.isFileNameEditTextVisible()}"
        android:onClick="@{() -> viewModel.saveClick()}"
        app:layout_constraintBottom_toBottomOf="@+id/et_fileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_fileName" />

    <ImageButton
        android:id="@+id/btn_reload"
        android:layout_width="@dimen/small_button"
        android:layout_height="@dimen/small_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_refresh_24"
        android:visibility="@{viewModel.isReloadButtonVisible()}"
        android:onClick="@{() -> viewModel.reloadClick()}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="Warning: Recording will stop\nif you leave this screen."
        android:textAlignment="center"
        android:visibility="@{viewModel.isStopButtonVisible()}"
        app:layout_constraintBottom_toTopOf="@+id/btn_viewRecordings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-a-valid-id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>